PVM Invocations: Remove old condition from `fetch`

--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -703,7 +703,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
       \memory_{o\dots+l} & \otherwise
     \end{cases} \\
     (\execst', \registers'_7) &\equiv \begin{cases}
-      (\panic, \registers_7) &\when \mathbb{N}_{o \dots+ l} \not\subset \mathbb{V}^*_{\memory}\ \vee\ (\registers_9 = 5 \wedge \mathbb{Z}_{\registers_{10} \dots+ 32} \not\subset \mathbb{V}_{\memory}) \\
+      (\panic, \registers_7) &\when \mathbb{N}_{o \dots+ l} \not\subset \mathbb{V}^*_{\memory} \\
       (\continue, \mathtt{NONE}) &\otherwhen \mathbf{v} = \none \\
       (\continue, |\mathbf{v}|) &\otherwise \\
     \end{cases}
