fix outdated definition

--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -202,10 +202,10 @@ Here, the prime annotation indicates posterior state. Individual components may 
     \item[$\gamma_\mathbf{s}$] The sealing-key sequence of the current epoch.
     \item[$\gamma_z$] The Bandersnatch root for the current epoch's ticket submissions.
   \end{description}
-  \item[$\delta$] The (prior) state of the service accounts. %	δ
+  \item[$\accountspre$] The (prior) state of the service accounts. %	δ
   \begin{description}
-    \item[$\delta^\dagger$] The post-preimage integration, pre-accumulation intermediate state. %	δ
-    \item[$\delta^\ddagger$] The post-accumulation, pre-transfer intermediate state. %	δ
+    \item[$\accountspostacc$] The post-accumulation, pre-transfer intermediate state. %	δ
+    \item[$\accountspostxfer$] The post-transfer, pre-preimage integration intermediate state. %	δ
   \end{description}
   \item[$\eta$] The e$\eta$tropy accumulator and epochal ra$\eta$domness. %	η
   \item[$\iota$] The validator keys and metadata to be drawn from next. %	ι
