doc(reporting_assurance): work reports have work results

--- a/text/reporting_assurance.tex
+++ b/text/reporting_assurance.tex
@@ -243,7 +243,7 @@ No reports may be placed on cores with a report pending availability on it. A re
     \rho^\ddagger[w_c] = \none \wedge w_a \in \alpha[w_c]
 \end{equation}
 
-We require that the gas allotted for accumulation of each work item in each work-report respects its service's minimum gas requirements. We also require that all work-reports total allotted accumulation gas is no greater than the overall gas limit $\mathsf{G}_A$:
+We require that the gas allotted for accumulation of each work result in each work-report respects its service's minimum gas requirements. We also require that all work-reports' total allotted accumulation gas is no greater than the overall gas limit $\mathsf{G}_A$:
 \begin{equation}
   \forall w \in \mathbf{w}:
     \sum_{r \in w_\mathbf{r}}\!(r_g) \le \mathsf{G}_A \ \wedge \ 
