PVM: Use a prime

--- a/text/pvm.tex
+++ b/text/pvm.tex
@@ -833,10 +833,10 @@ The four instances where the \textsc{pvm} is utilized each expect to be able to 
       R(\Psi_H(\mathbf{c}, \imath, \gascounter, \registers, \mem, f, \mathbf{x})) &\when Y(\mathbf{p}) = (\mathbf{c}, \registers, \mem)
     \end{cases}
   \end{aligned}\right.\\
-  \where R&\colon (\varepsilon, \imath', \gascounter', \registers', \mem', \mathbf{x}) \mapsto \begin{cases}
-    (\gascounter', \oog, \mathbf{x}) &\when \varepsilon = \oog \\
-    (\gascounter', \memory'_{\registers'_{7}\dots+\registers'_{8}}, \mathbf{x}) &\when \varepsilon = \halt \wedge \mathbb{Z}_{\registers'_{7}\dots+\registers'_{8}} \subset \mathbb{V}_{\mem'} \\
-    (\gascounter', [], \mathbf{x}) &\when \varepsilon = \halt \wedge \mathbb{Z}_{\registers'_{7}\dots+\registers'_{8}} \not\subset \mathbb{V}_{\mem'} \\
-    (\gascounter', \panic, \mathbf{x}) &\otherwise \\
+  \where R&\colon (\varepsilon, \imath', \gascounter', \registers', \mem', \mathbf{x}') \mapsto \begin{cases}
+    (\gascounter', \oog, \mathbf{x}') &\when \varepsilon = \oog \\
+    (\gascounter', \memory'_{\registers'_{7}\dots+\registers'_{8}}, \mathbf{x}') &\when \varepsilon = \halt \wedge \mathbb{Z}_{\registers'_{7}\dots+\registers'_{8}} \subset \mathbb{V}_{\mem'} \\
+    (\gascounter', [], \mathbf{x}') &\when \varepsilon = \halt \wedge \mathbb{Z}_{\registers'_{7}\dots+\registers'_{8}} \not\subset \mathbb{V}_{\mem'} \\
+    (\gascounter', \panic, \mathbf{x}') &\otherwise \\
   \end{cases}
 \end{align}
