Use explicit tuple keys for preimage lookup metadata dictionaries

--- a/text/accounts.tex
+++ b/text/accounts.tex
@@ -106,7 +106,7 @@ The historical lookup function $\Lambda$ may now be defined as:
   \begin{aligned}\label{eq:historicallookup}
     &\Lambda\colon (\mathbb{A}, \N_T, \H) \to \Y\bm{?} \\
     &\Lambda(\mathbf{a}, t, h) \equiv \begin{cases}
-      \mathbf{a}_\mathbf{p}[h]\!\!\!\! &\when h \in \keys{\mathbf{a}_\mathbf{p}} \wedge I(\mathbf{a}_\mathbf{l}[h, |\mathbf{a}_\mathbf{p}[h]|], t) \!\!\!\!\! \\
+      \mathbf{a}_\mathbf{p}[h]\!\!\!\! &\when h \in \keys{\mathbf{a}_\mathbf{p}} \wedge I(\mathbf{a}_\mathbf{l}[\tup{h, |\mathbf{a}_\mathbf{p}[h]|}], t) \!\!\!\!\! \\
       \none &\otherwise
     \end{cases}\\
     &\where I(\mathbf{l}, t) = \begin{cases}
