--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -246,6 +246,6 @@ We disregard, without prejudice, any preimages which due to the effects of accum
     \}\\
   \accountspostpreimage = \accountspostxfer \text{ ex. } \forall \tup{s\ts\mathbf{p}} \in \mathbf{P} : \left\{\,\begin{aligned}
       \quad\accountspostpreimage[s]_\mathbf{p}[\mathcal{H}(\mathbf{p})] &= \mathbf{p} \\
-      \accountspostpreimage[s]_\mathbf{l}[\mathcal{H}(\mathbf{p}), |\mathbf{p}|] &= [\tau']
+      \accountspostpreimage[s]_\mathbf{l}[\tup{\mathcal{H}(\mathbf{p}), |\mathbf{p}|}] &= [\tau']
     \end{aligned}\right.\!\!\!\!
 \end{align}
