Introduce metadata prefix into authorizer/service code blobs

--- a/preamble.tex
+++ b/preamble.tex
@@ -166,10 +166,12 @@
 
 \newcommand*{\wp¬authorizer}{a}
 \newcommand*{\wp¬authcode}{\mathbf{c}}
+\newcommand*{\wp¬metadata}{\mathbf{m}}
 
 \newcommand*{\wi¬importsegments}{\mathbf{i}}
 \newcommand*{\wi¬extrinsics}{\mathbf{x}}
 \newcommand*{\wi¬exportsegments}{e}
+\newcommand*{\wi¬codehash}{c}
 
 \newcommand*{\wr¬srlookup}{\mathbf{l}}
 
