Some work on renaming and macroization

--- a/preamble.tex
+++ b/preamble.tex
@@ -174,6 +174,19 @@
 \newcommand*{\wi¬codehash}{c}
 
 \newcommand*{\wr¬srlookup}{\mathbf{l}}
+\newcommand*{\wr¬authoutput}{\mathbf{o}} % TODO: Consider renaming to \mathbf{u} to free up \mathbf{o}
+\newcommand*{\wr¬results}{\mathbf{r}} % TODO: Consider renaming to avoid overloading \mathbf{r} reports vs results; maybe \mathbf{t} for results
+
+% TODO: Standardize and fully check this:
+% p P: work Packages
+% w I: work Items
+% w W: work Reports
+% r L: work resulTs
+% d: work output data (digest)
+% y: work payload
+
+\newcommand*{\wl¬data}{\mathbf{d}}
+\newcommand*{\wl¬payloadhash}{y}
 
 \newcommand*{\accumulated}{\xi}
 \newcommand*{\ready}{\vartheta}
