--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -169,13 +169,13 @@ The single-service accumulation function, $\Delta_1$, transforms an initial stat
     &\ \begin{aligned}
       g &= \subifnone(\mathbf{f}_s, 0) + \!\!\!\!\sum_{w \in \mathbf{w}, \mathbf{r} \in w_\mathbf{r} , \mathbf{r}_s = s}\!\!\!\!(\mathbf{r}_g) \\
       \mathbf{p} &= \left[ \tup{\begin{alignedat}{5}
-        % TODO: Rename \mathbf{o} to something else, to allow mathbf{a} to become o.
+        % TODO: Rename \mathbf{o} to something else, to allow mathbf{a} to become \mathbf{o}.
         % TODO: Rename k to h. Then 5 of the 6 fields keep their names.
-        \is{\mathbf{o}&}{\mathbf{r}_\mathbf{o}},
+        \is{\mathbf{d}&}{\mathbf{r}_\wl¬data},
         \is{&e&}{(w_s)_e},
-        \is{&\mathbf{a}&}{w_\mathbf{o}},\\
-        \is{l&}{\mathbf{r}_l},
-        \is{&k&}{(w_s)_h},
+        \is{&\mathbf{o}&}{w_\wr¬authoutput},\\
+        \is{y&}{\mathbf{r}_\wl¬payloadhash},
+        \is{&h&}{(w_s)_h},
         \is{&a&}{w_a}
       \end{alignedat}}
       \,\middle\vert\ 
