--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -268,7 +268,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\mathsf{G}_R = 5,000,000,000$] The gas allocated to invoke a work-package's Refine logic.
   \item[$\mathsf{G}_T = 3,500,000,000$] The total gas allocated across for all Accumulation. Should be no smaller than $\mathsf{G}_A\cdot\mathsf{C} + \sum_{g \in \mathcal{V}(\chi_\mathbf{g})}(g)$.
   \item[$\mathsf{H} = 8$] The size of recent history, in blocks.
-  \item[$\mathsf{I} = 4$] The maximum amount of work items in a package.
+  \item[$\mathsf{I} = 16$] The maximum amount of work items in a package.
   \item[$\mathsf{J} = 8$] The maximum sum of dependency items in a work-report.
   \item[$\mathsf{K} = 16$] The maximum number of tickets which may be submitted in a single extrinsic.
   \item[$\mathsf{L} = 14,400$] The maximum age in timeslots of the lookup anchor.
@@ -278,13 +278,14 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\mathsf{Q} = 80$] The number of items in the authorizations queue.
   \item[$\mathsf{R} = 10$] The rotation period of validator-core assignments, in timeslots.
   \item[$\mathsf{S} = 1024$] The maximum number of entries in the accumulation queue.
+  \item[$\mathsf{T} = 128$] The maximum number of extrinsics in a work-package.
   \item[$\mathsf{U} = 5$] The period in timeslots after which reported but unavailable work may be replaced.
   \item[$\mathsf{V} = 1023$] The total number of validators.
   \item[$\mathsf{W}_B = 12\cdot2^{20}$] The maximum size of an encoded work-package together with its extrinsic data and import implications, in octets.
   \item[$\mathsf{W}_C = 4,000,000$] The maximum size of service code in octets.
   \item[$\mathsf{W}_E = 684$] The basic size of erasure-coded pieces in octets. See equation \ref{eq:erasurecoding}.
   \item[$\mathsf{W}_G = \mathsf{W}_P\mathsf{W}_E = 4104$] The size of a segment in octets.
-  \item[$\mathsf{W}_M = 2^{11}$] The maximum number of entries in a work-package manifest.
+  \item[$\mathsf{W}_M = 3,072$] The maximum number of imports and exports in a work-package.
   \item[$\mathsf{W}_P = 6$] The number of erasure-coded pieces in a segment.
   \item[$\mathsf{W}_R = 48\cdot2^{10}$] The maximum total size of all output blobs in a work-report, in octets.
   \item[$\mathsf{W}_T = 128$] The size of a transfer memo in octets.
