WPs&WRs: Fix Refine arguments

--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -191,11 +191,9 @@ Where:
     (r, \mathbf{e}) &\when |\mathbf{e}| = w_e \\
     (r, [\mathbb{G}_0, \mathbb{G}_0, \dots]_{\dots w_e}) &\otherwhen r \not\in \mathbb{Y} \\
     (\badexports, [\mathbb{G}_0, \mathbb{G}_0, \dots]_{\dots w_e}) &\otherwise \\
-    \multicolumn{2}{l}{\where (r, \mathbf{e}) = \Psi_R\left(\,\begin{aligned}
-      &\wiX_c, \wiX_g, \wiX_s, h, \wiX_\mathbf{y}, \wpX_\wp¬context,\\[2pt]
-      &\wpX_\wp¬authorizer, \mathbf{o}, \importsegmentdata(w, \mathbf{l}), \extrinsicdata(w), \ell
-    \end{aligned}\,\right)
-    }\\
+    \multicolumn{2}{l}{\where (r, \mathbf{e}) = \Psi_R(
+      j, \wpX, \mathbf{o}, \importsegmentdata(w, \mathbf{l}), \ell
+    )}\\
     \multicolumn{2}{l}{\also h = \mathcal{H}(\wpX)\,,\; w = \wpX_\wp¬workitems[j]\,,\; \ell = \sum_{k < j}\wpX_\wp¬workitems[k]_\wi¬exportsegments}
   \end{cases}
 \end{align*}
